# vfsampler

./: .gitignore  main.py  pyproject.toml
pkg/: plotting.py
pkg/distributions/: annealing.py  augmented_annealing.py  base.py  conditional_gaussian.py  gaussian.py  gmm.py  multi_double_well.py
pkg/mcmc/: hmc.py  smc.py
pkg/nn/: __init__.py  gaussian_mlp.py  mlp.py  test_function.py  transformer.py  utils.py
pkg/ode/: euler.py  integration.py
pkg/training/: augmentation.py  dt_logZt.py  objective.py  utils.py
